--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "czproject/git-php": "^4.2",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "ocramius/package-versions": "^2.8",
+        "poing/laravel-elb": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
