--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": "^8.2",
         "czproject/git-php": "^4.2",
         "laravel/framework": "^11.9",
+        "laravel/jetstream": "^5.1",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.0",
         "ocramius/package-versions": "^2.8",
         "poing/laravel-elb": "^1.0"
     },
