--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -3,5 +3,10 @@ commands:
     command: "yum install nodejs npm --enablerepo=epel -y || :"
 
 container_commands:
+  01-install-packages:
+    command: "sudo npm install || :"
+
+
+container_commands:
   01-install-gulp:
     command: "sudo npm install -g gulp || :"
