Try webapp user

--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -4,7 +4,7 @@ commands:
 
 container_commands:
   01-install-packages:
-    command: "sudo npm install || :"
+    command: "sudo -H -u webapp  npm install || :"
 
 
 container_commands:
