--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -3,5 +3,10 @@ commands:
     command: "yum install nodejs npm --enablerepo=epel -y || :"
 
 container_commands:
-  01-install-node-modules:
+  02-install-node-modules:
     command: "sudo -u webapp npm install  || :"
+
+
+container_commands:
+  03-npm-build:
+    command: "sudo -u webapp npm run build || :"
