--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -1,12 +1,11 @@
 commands:
   01-install-node:
-    command: "yum install nodejs npm --enablerepo=epel -y >> /var/log/npm.log"
+    command: "yum install nodejs npm --enablerepo=epel -y || :"
 
 container_commands:
   02-install-node-modules:
-    command: "sudo -u webapp npm install  >> /var/log/npm.log"
+    command: "sudo -u webapp npm install  || :"
 
 container_commands:
   03-npm-build:
-    command: "sudo -u webapp npm run build  >> /var/log/npm.log"
-
+    command: "sudo -u webapp npm run build || :"
