--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -1,6 +1,6 @@
 commands:
   01-install-node:
-    command: "yum install nodejs npm --enablerepo=epel -y || :"
+    command: "yum install nodejs npm || :"
 
 container_commands:
   02-install-node-modules:
