--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -1,11 +1,11 @@
 commands:
   01-install-node:
-    command: "yum install nodejs npm || :"
+    command: "yum install nodejs npm >> /var/log/npm.log"
 
 container_commands:
   02-install-node-modules:
-    command: "sudo -u webapp npm install  || :"
+    command: "sudo -u webapp npm install >> /var/log/npm.log"
 
 container_commands:
   03-npm-build:
-    command: "sudo -u webapp npm run build || :"
+    command: "sudo -u webapp npm run build >> /var/log/npm.log"
