--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -1,6 +1,6 @@
 commands:
   01-install-node:
-    command: "yum install nodejs npm >> /var/log/npm.log"
+    command: "yum install nodejs npm -y >> /var/log/npm.log"
 
 container_commands:
   02-install-node-modules:
