--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -4,8 +4,8 @@ commands:
 
 container_commands:
   02-install-node-modules:
-    command: "sudo -u webapp npm install >> /var/log/npm.log"
+    command: "sudo -u webapp npm install --loglevel verbose >> /var/log/npm.log"
 
 container_commands:
   03-npm-build:
-    command: "sudo -u webapp npm run build >> /var/log/npm.log"
+    command: "sudo -u webapp npm run build --loglevel verbose >> /var/log/npm.log"
