--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -2,10 +2,14 @@ commands:
   01-install-node:
     command: "yum install nodejs npm --enablerepo=epel -y || :"
 
+commands:
+  02-cache-clean:
+    "sudo -u webapp npm cache clean -f || :"
+
 container_commands:
-  02-install-node-modules:
+  03-install-node-modules:
     command: "sudo -u webapp npm install  || :"
 
 container_commands:
-  03-npm-build:
+  04-npm-build:
     command: "sudo -u webapp npm run build || :"
