--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -1,15 +1,15 @@
 commands:
   01-install-node:
-    command: "yum install nodejs npm --enablerepo=epel -y || :"
+    command: "yum install nodejs npm --enablerepo=epel -y > /var/log/npm.log"
 
 commands:
   02-cache-clean:
-    "sudo -u webapp npm cache clean -f || :"
+    "sudo -u webapp npm --verbose cache clean -f >> /var/log/npm.log"
 
 container_commands:
   03-install-node-modules:
-    command: "sudo -u webapp npm install  || :"
+    command: "sudo -u webapp npm --verbose install >> /var/log/npm.log"
 
 container_commands:
   04-npm-build:
-    command: "sudo -u webapp npm run build || :"
+    command: "sudo -u webapp npm --verbose run build >> /var/log/npm.log"
