--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -4,7 +4,7 @@ commands:
 
 commands:
   02-cache-clean:
-    "sudo -u webapp npm --verbose cache clean -f >> /var/log/npm.log"
+    command: "sudo -u webapp npm --verbose cache clean -f >> /var/log/npm.log"
 
 container_commands:
   03-install-node-modules:
