--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -4,12 +4,12 @@ commands:
 
 commands:
   02-cache-clean:
-    command: "sudo -u webapp npm --verbose cache clean -f"
+    command: "sudo -u webapp npm cache clean -f"
 
 container_commands:
   03-install-node-modules:
-    command: "sudo -u webapp npm --verbose install"
+    command: "sudo -u webapp npm install"
 
 container_commands:
   04-npm-build:
-    command: "sudo -u webapp npm --verbose run build"
+    command: "sudo -u webapp npm run build"
