--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -1,15 +1,11 @@
 commands:
   01-install-node:
-    command: "yum install nodejs npm --enablerepo=epel -y"
-
-commands:
-  02-cache-clean:
-    command: "sudo -u webapp npm cache clean -f"
+    command: "yum install nodejs npm --enablerepo=epel -y || :"
 
 container_commands:
-  03-install-node-modules:
-    command: "sudo -u webapp npm install"
+  02-install-node-modules:
+    command: "sudo -u webapp npm install  || :"
 
 container_commands:
-  04-npm-build:
-    command: "sudo -u webapp npm run build"
+  03-npm-build:
+    command: "sudo -u webapp npm run build || :"
