--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -4,8 +4,8 @@ commands:
 
 container_commands:
   02-install-node-modules:
-    command: "sudo -u webapp npm install -d --logs-dir=. || :"
+    command: "sudo -u webapp npm install --dd --logs-dir=. || :"
 
 container_commands:
   03-npm-build:
-    command: "sudo -u webapp npm run build -d --logs-dir=. || :"
+    command: "sudo -u webapp npm run build --dd --logs-dir=. || :"
