--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -7,5 +7,9 @@ container_commands:
     command: "sudo -u webapp npm install --ddd --logs-dir=. || :"
 
 container_commands:
-  03-npm-build:
+  03-public-build:
+    command: "sudo -u webapp mkdir public/build || :"
+
+container_commands:
+  04-npm-build:
     command: "sudo -u webapp npm run build --ddd --logs-dir=. || :"
