--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -8,7 +8,7 @@ container_commands:
 
 container_commands:
   03-public-build:
-    command: "sudo -u webapp mkdir public/build || :"
+    command: "sudo -u webapp mkdir -p /var/app/staging/public/build || :"
 
 container_commands:
   04-npm-build:
