--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -8,8 +8,12 @@ container_commands:
 
 container_commands:
   03-public-build:
-    command: mkdir -p public/build
+    command: mkdir -p /var/app/staging/public/build
 
 container_commands:
-  04-npm-build:
+  04-other:
+    command: mkdir -p brian
+
+container_commands:
+  05-npm-build:
     command: "sudo -u webapp npm run build --ddd --logs-dir=. || :"
