--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -1,14 +1,12 @@
 commands:
   01-install-node:
     command: "yum install nodejs npm --enablerepo=epel -y || :"
+  02-public-build:
+    command: mkdir -p public/build
 
 container_commands:
-  02-install-node-modules:
+  03-install-node-modules:
     command: "sudo -u webapp npm install --ddd --logs-dir=. || :"
-
-container_commands:
-  03-public-build:
-    command: mkdir -p /var/app/staging/public/build
 
 container_commands:
   04-other:
