--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -2,16 +2,10 @@ commands:
   01-install-node:
     command: "yum install nodejs npm --enablerepo=epel -y || :"
   02-public-build:
-    command: mkdir -p public/build
+    command: mkdir -p /var/app/staging/public/build
 
 container_commands:
-  03-install-node-modules:
+  01-install-node-modules:
     command: "sudo -u webapp npm install --ddd --logs-dir=. || :"
-
-container_commands:
-  04-other:
-    command: mkdir -p brian
-
-container_commands:
-  05-npm-build:
+  02-npm-build:
     command: "sudo -u webapp npm run build --ddd --logs-dir=. || :"
