--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -2,7 +2,11 @@ commands:
   01-install-node:
     command: "yum install nodejs npm --enablerepo=epel -y || :"
   02-public-build:
-    command: mkdir -p /var/app/staging/public/build
+    command: mkdir /var/app/ondeck/public/build
+    ignoreErrors: true
+  03-public-build:
+    command: mkdir /var/app/staging/public/build
+    ignoreErrors: true
 
 container_commands:
   01-install-node-modules:
