Fixed the vite issue, without the .gitignore trick

--- a/.ebextensions/50-node-npm-gulp.config
+++ b/.ebextensions/50-node-npm-gulp.config
@@ -1,7 +1,7 @@
 commands:
   01-install-node:
     command: "yum install nodejs npm --enablerepo=epel -y || :"
-  02-public-build:
+  02-public-build-legacy:
     command: mkdir /var/app/ondeck/public/build
     ignoreErrors: true
   03-public-build:
@@ -10,6 +10,6 @@ commands:
 
 container_commands:
   01-install-node-modules:
-    command: "sudo -u webapp npm install --ddd --logs-dir=. || :"
+    command: "sudo -u webapp npm install || :"
   02-npm-build:
-    command: "sudo -u webapp npm run build --ddd --logs-dir=. || :"
+    command: "sudo -u webapp npm run build || :"
